package pl.olek.niezlababeczka.entity;

public class CakeOrderItem {

    private int layers;
    private Cake cake;
    private int numberOfPortions;
    private LayerTastes layerTastes;


}
