package pl.olek.niezlababeczka.entity;

public class PieOrderItem {

    private Pie pie;
    private PieSize pieSize;
    private PieType pieType;
}
