package pl.olek.niezlababeczka.entity;

public class SweetOrderItem {

    private Sweet sweet;
    private int quantity;
}
